--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: number_Pad
+name: number_pad
 description: A new Flutter Package for numeric Keyboard.
 version: 0.0.1
 homepage: https://github.com/Mo0Khaled/numpad
