added description to pubyaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: numpad_layout
-description: A new Flutter Package for numeric Keyboard.
+description: A new Flutter Package for numeric Keyboard with flexible customization as well as arabic digits support and many many more.
 version: 0.0.1
 homepage: https://github.com/Mo0Khaled/numpad
 
